bug left: 1 step behind

--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,3 @@
-
 .App {
   display: flex;
   flex-direction: column;
@@ -9,24 +8,28 @@
 .title {
   text-align: center;
 }
+
 .title {
   color: #0baf94;
   font-size: 50px;
   font-weight: 700;
   text-shadow: 3px 3px #ca90ff;
 }
+
 .subtitle {
   color: #ca90ff;
   font-size: 30px;
   font-weight: 900;
   text-shadow: 3px 3px #0baf94;
 }
+
 .divider {
   border-bottom: 4px solid rgba(255, 41, 41, .555);
   height: 1px;
   margin: 20px auto;
   width: 50%;
 }
+
 .avatar-group {
   display: flex;
   flex-wrap: wrap;
@@ -35,13 +38,15 @@
   width: 95%;
   margin: 0 auto;
 }
+
 .avatar-container {
   display: flex;
   flex-direction: column;
   align-items: center;
   position: sticky;
-  top:25%;
+  top: 25%;
 }
+
 .avatar-picture {
   position: relative;
   height: 306px;
@@ -53,6 +58,7 @@
   border-radius: 40px;
   background-color: rgba(176, 140, 215, 0.4)
 }
+
 .btn-random {
   position: relative;
   margin-top: 10px;
@@ -64,6 +70,7 @@
   border: none;
   border-radius: 10px;
 }
+
 .avatar-option {
   width: 61%;
   max-width: 652px;
@@ -71,16 +78,19 @@
   display: flex;
   flex-direction: column;
 }
+
 .part-list-container {
   background-color: rgba(11, 175, 148, 0.4);
   border: 5px solid rgba(0, 83, 64, 0.5);
   border-radius: 15px;
   padding: 20px;
 }
-.part-list{
+
+.part-list {
   display: flex;
   justify-content: flex-end;
 }
+
 .part-list-content {
   position: relative;
   display: flex;
@@ -90,23 +100,28 @@
   justify-content: flex-start;
   width: 100%;
 }
-.part-list-content>div{
+
+.part-list-content>div {
   background-color: rgba(255, 161, 122, .2);
   border-radius: 25%;
 }
-.part-list-content .selected{
+
+.part-list-content .selected {
   background-color: rgba(255, 161, 122, .4);
   border: dashed 2px rgba(11, 175, 148, 0.5);
 }
+
 .list-section {
   text-align: center;
 }
+
 .list-section h1 {
   color: rgba(255, 41, 41, .555);
   text-transform: capitalize;
   font-size: 24px;
 }
-.part-list-content img {
 
+.part-list-content img {
+  cursor: pointer;
   border-radius: 10px;
 }
